--- a/electric-charging-stations.html
+++ b/electric-charging-stations.html
@@ -79,7 +79,7 @@
 <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Lines</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a></li>
 <li class="nav-item mr-0"><a href="solar-pv-raw-materials.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV Raw Materials</a></li>
 <li class="nav-item mr-0"><a href="solar-epc-components.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC Components</a></li>
 </ul>
@@ -119,7 +119,7 @@
 <li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>
@@ -145,7 +145,7 @@
 <a href="#" title=""> Solar PV</a>
 <ul>
 <li><a href="#" title="">Solar Cell Production Lines</a></li>
-<li><a href="#" title="">Solar Panel Production Lines</a></li>
+<li><a href="#" title="">SOLAR PANEL PRODUCTION LINES</a></li>
 <li><a href="solar-pv-raw-materials.html" title="">Solar PV Raw Materials</a></li>
 <li><a href="solar-epc-components.html" title="">Solar EPC Components</a></li>
 </ul>
@@ -192,7 +192,7 @@
 <ul>
 <li><a href="#" title="">  Solar Panels</a></li>
 <!-- Two -->
-<li><a href="lithium-batteries.html" title="Lithium Batteries" title=""> Lithium Batteries</a></li>
+<li><a href="lithium-batteries-lines.html" title="Lithium Batteries" title=""> Lithium Batteries</a></li>
 <!-- Three -->
 <li><a href="#" title=""> E-Charging stations</a></li>
 
@@ -200,6 +200,20 @@
 </li>
 
 <li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
+  <ul>
+<li><a href="#" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
+<li><a href="#" title="Giga Factories">Giga Factories</a></li>
+<li><a href="#" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
+<li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
+<ul>
+<li><a href="#" title="Copper Foil">Copper Foil</a></li>
+<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="#" title="Belt Seperator">Belt Seperator</a></li>
+<li><a href="#" title="Electrolyte">Electrolyte</a></li>
+<li><a href="#" title="Casing">Casing</a></li>
+</ul>
+</li>
+</ul>
 </li>
 <li><a href="career.html" title="Career">Career</a></li>
 <li><a href="news-and-events.html" title="News & Events">News & Events</a></li>
@@ -450,7 +464,7 @@ related infrastructure. We are offering highly customized solutions for various 
   <li class="border-bottom"><a href="lithium-battery-raw-material-components.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
 
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
+  <li class="border-bottom"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
   
   </ul>
   </div>
