--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Title Tag -->
-  <title>Indygreen Technologies - Turnkey Solar PV, Lithium Battery & Green Hydrogen Production Lines</title>
+  <title>Indygreen Technologies - Turnkey Solar PV & Lithium Battery Production Lines</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies offers turnkey GW-scale Solar PV panel production lines, lithium cell & battery pack production lines, electric charging infrastructure, and hydrogen mobility solutions in India." />
+  <meta name="description" content="Indygreen Technologies offers turnkey GW-scale Solar PV panel production lines, lithium cell & battery pack production lines, electric charging infrastructure solutions in India." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="solar PV production lines, lithium Cell Production lines, lithium battery pack production, electric charging stations, hydrogen production lines, green hydrogen, turnkey solar manufacturing, Indygreentech India" />
+  <meta name="keywords" content="solar PV production lines, lithium Cell Production lines, lithium battery pack production, electric charging stations, turnkey solar manufacturing, Indygreentech India" />
 
   <!-- Robots Tag -->
   <meta name="robots" content="index, follow" />
@@ -20,8 +20,8 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
   <!-- Open Graph (Facebook / LinkedIn) -->
-  <meta property="og:title" content="Indygreen Technologies – Solar, Lithium & Hydrogen Production Solutions" />
-  <meta property="og:description" content="Providing turnkey solutions in India for Solar PV, lithium batteries, electric vehicle charging infrastructure, and green hydrogen systems." />
+  <meta property="og:title" content="Indygreen Technologies – Solar & Lithium Solutions" />
+  <meta property="og:description" content="Providing turnkey solutions in India for Solar PV, lithium batteries, electric vehicle charging infrastructure." />
   <meta property="og:url" content="https://www.indygreentech.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
@@ -29,8 +29,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Indygreen Technologies – Solar, Lithium & Hydrogen Production Solutions" />
-  <meta name="twitter:description" content="Turnkey solutions in India for solar PV manufacturing, lithium battery lines, EV charging infrastructure & hydrogen mobility." />
+  <meta name="twitter:title" content="Indygreen Technologies – Solar & Lithium Solutions" />
+  <meta name="twitter:description" content="Turnkey solutions in India for solar PV manufacturing, lithium battery lines, EV charging infrastructure." />
   <!-- Optionally add: <meta name="twitter:image" content="https://www.indygreentech.com/twitter-card.jpg" /> -->
 
   <!-- Canonical -->
@@ -108,43 +108,43 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Line</a>
+<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Semi Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Line</a></li>
-<li class="nav-item mr-0"><a href="#" title="Fully Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Line</a></li>
-<li class="nav-item mr-0"><a href="#" title="Tarbor and Stringer" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tarbor and Stringer</a></li>
+<li class="nav-item mr-0"><a href="#" title="Semi Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Fully Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Tabber Stringers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tabber Stringers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laminator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laser Cutters" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Cutters</a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
+<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Cells</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar Plant" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Plant</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Glass" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Glass</a></li>
 <li class="nav-item mr-0"><a href="#" title="Solar Aluminum Frame" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Aluminum Frame</a></li>
 <li class="nav-item mr-0"><a href="#" title="Solar Junction Box" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Junction Box</a></li>
 <li class="nav-item mr-0"><a href="#" title="Solar Sealant and Bonding" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Sealant and Bonding</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar wire and plugs" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar wire and plugs</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solder Wire & Solar Flux" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solder Wire & Solar Flux</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="#" title="Solar EPC components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC components </a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
+<li class="nav-item mr-0"><a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
+<li class="nav-item mr-0"><a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
 <li class="nav-item mr-0"><a href="#" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
@@ -166,19 +166,19 @@
 <!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
 <li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Line</a>
+<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="GW Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> GW Factories</a>
+<li class="nav-item mr-0"><a href="#" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Lab/ Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/ Pilot Lines</a>
+<li class="nav-item mr-0"><a href="#" title="Lab/Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/Pilot Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
+<li class="nav-item mr-0"><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
@@ -208,18 +208,18 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line">Solar Panel Production Line</a>
+<a href="solar-panel-production-lines.html" title="Solar Panel Production Line">SOLAR PANEL PRODUCTION LINES</a>
 <ul>
-<li><a href="#" title="Semi Auto Line">Semi Auto Line</a></li>
-<li><a href="#" title="Fully Auto Line">Fully Auto Line</a></li>
-<li><a href="#" title="Tarbor and Stringer">Tarbor and Stringer</a></li>
+<li><a href="#" title="Semi Auto Line">Semi Auto Lines</a></li>
+<li><a href="#" title="Fully Auto Line">Fully Auto Lines</a></li>
+<li><a href="#" title="Tabber Stringers">Tabber Stringers</a></li>
 <li><a href="#" title="Laminator">Laminator</a></li>
 <li><a href="#" title="Laser Cutters">Laser Cutters</a></li>
 </ul>
 </li>
 <!-- Two -->
  <li>
-<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
+<a href="#" title="Solar Cell Production Line">Solar Cell Production Lines</a>
 </li>
 <li>
 <a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
@@ -228,11 +228,11 @@
 <a href="raw-materials.html" title="Raw Materials">Raw Materials</a>
 <ul>
 <li><a href="#" title="Solar Cells">Solar Cells</a></li>
-<li><a href="#" title="Solar Plant">Solar Plant</a></li>
+<li><a href="#" title="Solar Glass">Solar Glass</a></li>
 <li><a href="#" title="Solar Aluminum Frame">Solar Aluminum Frame</a></li>
 <li><a href="#" title="Solar Junction Box">Solar Junction Box</a></li>
 <li><a href="#" title="Solar Sealant and Bonding">Solar Sealant and Bonding</a></li>
-<li><a href="#" title="Solar wire and plugs">Solar wire and plugs</a></li>
+<li><a href="#" title="Solder Wire & Solar Flux">Solder Wire & Solar Flux</a></li>
 </ul>
 </li>
 <li>
@@ -247,12 +247,12 @@
 
 
 
-<li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
+<li><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
-<a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
+<a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
+<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Lines</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
 <li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
 <li><a href="#" title="Welding Machines">Welding Machines</a></li>
@@ -260,7 +260,7 @@
 </li>
 <!-- Two -->
 <li>
-<a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
+<a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
 <ul>
 <li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
 <li><a href="#" title="Automatic Lines">Automatic Lines</a></li>
@@ -281,6 +281,20 @@
 </li>
 
 <li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
+  <ul>
+<li><a href="#" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
+<li><a href="#" title="Giga Factories">Giga Factories</a></li>
+<li><a href="#" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
+<li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
+<ul>
+<li><a href="#" title="Copper Foil">Copper Foil</a></li>
+<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="#" title="Belt Seperator">Belt Seperator</a></li>
+<li><a href="#" title="Electrolyte">Electrolyte</a></li>
+<li><a href="#" title="Casing">Casing</a></li>
+</ul>
+</li>
+</ul>
 </li>
 <li><a href="career.html" title="Career">Career</a></li>
 <li><a href="news-and-events.html" title="News & Events">News & Events</a></li>
@@ -383,34 +397,6 @@
 </div>
 </div>
 
-<div class="item">
-<div class="hero-slider-3">
-<div class="overlay-side"></div>
-<div class="col-md-8 slider-caption text-center">
-<span class="text-white text-uppercase wow fadeInUp"> Hydrogen <br><color class="orange"> The Future of Mobility
- </color>   </span>
-<p class="wow fadeInUp text-center">Technology Solutions for Fuel Cells, Electrolyers & Green Hydrogen Production</p>
-
-
-
-<!-- <ul class="btn-list wow fadeInUp mt-4">
-<li class="list-inline-item"><a href="#" class="text-white font-weight-bold orange_btn">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-</a></li>
-
-<li class="list-inline-item"><a href="#" class="text-white font-weight-bold green-btn">Contact Us <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-</a></li>
-
-</ul> -->
-</div>
-</div>
-</div>
-
-
-
-
-
-
-
 <!-- <div class="hero-slider">
 <div class="video-overlap">
 <video muted="" autoplay="" loop="loop" poster="/" playsinline="" id="vid">
@@ -486,7 +472,7 @@ Your browser does not support the video tag.
 <div class="btn-box">
 <ul>
 <li class="list-inline-item mb-3"><a href="#" title="Solar Cell Production Lines"> Solar Cell Production Lines</a></li>
-<li class="list-inline-item mb-3"><a href="#" title="Solar Panel Production Lines"> Solar Panel Production Lines</a></li>
+<li class="list-inline-item mb-3"><a href="#" title="SOLAR PANEL PRODUCTION LINES"> SOLAR PANEL PRODUCTION LINES</a></li>
 <li class="list-inline-item mb-3"><a href="#" title="Solar PV Raw Materials"> Solar PV Raw Materials</a></li>
 <li class="list-inline-item mb-3"><a href="#" title="Solar EPC Components"> Solar EPC Components</a></li>
 </ul>
@@ -566,7 +552,7 @@ style="background: url(img/unit-1.jpg)no-repeat; background-size: cover;">
 <div class="btn-box">
   <ul>
   <li class="list-inline-item mb-3"><a href="#" title="Solar Cell Production Lines"> Solar Cell Production Lines</a></li>
-  <li class="list-inline-item mb-3"><a href="#" title="Solar Panel Production Lines"> Solar Panel Production Lines</a></li>
+  <li class="list-inline-item mb-3"><a href="#" title="SOLAR PANEL PRODUCTION LINES"> SOLAR PANEL PRODUCTION LINES</a></li>
   <li class="list-inline-item mb-3"><a href="#" title="Solar PV Raw Materials"> Solar PV Raw Materials</a></li>
   <li class="list-inline-item mb-3"><a href="#" title="Solar EPC Components"> Solar EPC Components</a></li>
   </ul>
@@ -2506,7 +2492,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
+  <li class="border-bottom"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
   <li class="border-bottom"><a href="lithium-cell-lines.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
 
 
