--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -107,26 +107,26 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Line</a>
+<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Semi Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Line</a></li>
-<li class="nav-item mr-0"><a href="#" title="Fully Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Line</a></li>
-<li class="nav-item mr-0"><a href="#" title="Tarbor and Stringer" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tarbor and Stringer</a></li>
+<li class="nav-item mr-0"><a href="#" title="Semi Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Fully Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Tabber Stringers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tabber Stringers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laminator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laser Cutters" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Cutters</a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
+<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Cells</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar Plant" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Plant</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Glass" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Glass</a></li>
 <li class="nav-item mr-0"><a href="#" title="Solar Aluminum Frame" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Aluminum Frame</a></li>
 <li class="nav-item mr-0"><a href="#" title="Solar Junction Box" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Junction Box</a></li>
 <li class="nav-item mr-0"><a href="#" title="Solar Sealant and Bonding" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Sealant and Bonding</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar wire and plugs" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar wire and plugs</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solder Wire & Solar Flux" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solder Wire & Solar Flux</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="#" title="Solar EPC components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC components </a></li>
@@ -135,15 +135,15 @@
 
 <li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
+<li class="nav-item mr-0"><a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
+<li class="nav-item mr-0"><a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
 <li class="nav-item mr-0"><a href="#" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
@@ -175,13 +175,13 @@
 
 <li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Line</a>
+<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="GW Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> GW Factories</a>
+<li class="nav-item mr-0"><a href="#" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Lab/ Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/ Pilot Lines</a>
+<li class="nav-item mr-0"><a href="#" title="Lab/Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/Pilot Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
+<li class="nav-item mr-0"><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
@@ -211,18 +211,18 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line">Solar Panel Production Line</a>
+<a href="solar-panel-production-lines.html" title="Solar Panel Production Line">SOLAR PANEL PRODUCTION LINES</a>
 <ul>
-<li><a href="#" title="Semi Auto Line">Semi Auto Line</a></li>
-<li><a href="#" title="Fully Auto Line">Fully Auto Line</a></li>
-<li><a href="#" title="Tarbor and Stringer">Tarbor and Stringer</a></li>
+<li><a href="#" title="Semi Auto Line">Semi Auto Lines</a></li>
+<li><a href="#" title="Fully Auto Line">Fully Auto Lines</a></li>
+<li><a href="#" title="Tabber Stringers">Tabber Stringers</a></li>
 <li><a href="#" title="Laminator">Laminator</a></li>
 <li><a href="#" title="Laser Cutters">Laser Cutters</a></li>
 </ul>
 </li>
 <!-- Two -->
  <li>
-<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
+<a href="#" title="Solar Cell Production Line">Solar Cell Production Lines</a>
 </li>
 <li>
 <a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
@@ -231,11 +231,11 @@
 <a href="raw-materials.html" title="Raw Materials">Raw Materials</a>
 <ul>
 <li><a href="#" title="Solar Cells">Solar Cells</a></li>
-<li><a href="#" title="Solar Plant">Solar Plant</a></li>
+<li><a href="#" title="Solar Glass">Solar Glass</a></li>
 <li><a href="#" title="Solar Aluminum Frame">Solar Aluminum Frame</a></li>
 <li><a href="#" title="Solar Junction Box">Solar Junction Box</a></li>
 <li><a href="#" title="Solar Sealant and Bonding">Solar Sealant and Bonding</a></li>
-<li><a href="#" title="Solar wire and plugs">Solar wire and plugs</a></li>
+<li><a href="#" title="Solder Wire & Solar Flux">Solder Wire & Solar Flux</a></li>
 </ul>
 </li>
 <li>
@@ -253,9 +253,9 @@
 <li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
-<a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
+<a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
+<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Lines</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
 <li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
 <li><a href="#" title="Welding Machines">Welding Machines</a></li>
@@ -263,7 +263,7 @@
 </li>
 <!-- Two -->
 <li>
-<a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
+<a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
 <ul>
 <li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
 <li><a href="#" title="Automatic Lines">Automatic Lines</a></li>
@@ -284,6 +284,20 @@
 </li>
 
 <li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
+  <ul>
+<li><a href="#" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
+<li><a href="#" title="Giga Factories">Giga Factories</a></li>
+<li><a href="#" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
+<li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
+<ul>
+<li><a href="#" title="Copper Foil">Copper Foil</a></li>
+<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="#" title="Belt Seperator">Belt Seperator</a></li>
+<li><a href="#" title="Electrolyte">Electrolyte</a></li>
+<li><a href="#" title="Casing">Casing</a></li>
+</ul>
+</li>
+</ul>
 </li>
 <li><a href="career.html" title="Career">Career</a></li>
 <li><a href="news-and-events.html" title="News & Events">News & Events</a></li>
@@ -307,7 +321,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">LITHIUM BATTERIES Lines</h1>
+<h1 class="title text-white">LITHIUM BATTERIES LINES</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -328,15 +342,15 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines in India"><img src="img/for-cylindrical-batteries.png" class="card-img-top product-img" alt="Cylindrical Batteries Lines in India" title="Cylindrical Batteries Lines in India"></a>
+        <a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines in India"><img src="img/for-cylindrical-batteries.png" class="card-img-top product-img" alt="Cylindrical Batteries Lines in India" title="Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cylindrical Batteries Lines</h5>
-            <p class="card-text text-muted">High-performance cylindrical batteries for energy storage solutions.</p>
+            <p class="card-text text-muted">High-performance Cylindrical Battery Production Lines designed for efficient assembly, welding, testing, and packaging. Delivering automation solutions for EV, ESS, and consumer electronics with precision and scalability.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -345,15 +359,15 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines in India"><img src="img/for-prismatic-batteries.png" class="card-img-top product-img" alt="Prismatic Batteries Lines in India" title="Prismatic Batteries Lines in India"></a>
+        <a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines in India"><img src="img/for-prismatic-batteries.png" class="card-img-top product-img" alt="Prismatic Batteries Lines in India" title="Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Prismatic Batteries Lines</h5>
-            <p class="card-text text-muted">Reliable prismatic batteries for EV and industrial applications.</p>
+            <p class="card-text text-muted">Advanced Prismatic Battery Production Lines offering automated assembly, welding, testing, and sorting. Engineered for EVs, energy storage, and industrial applications with high efficiency and reliability</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -364,7 +378,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BESS Container Assembly Lines</h5>
-            <p class="card-text text-muted">Turnkey battery pack testers for optimized battery performance.</p>
+            <p class="card-text text-muted">Complete BESS Container Assembly Lines for energy storage solutions, enabling automated integration of battery packs, cooling, fire safety, and control systems. Designed for utility, C&I, and renewable energy applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -401,7 +415,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Pack Testers</h5>
-            <p class="card-text text-muted">Turnkey battery pack testers for optimized battery performance.</p>
+            <p class="card-text text-muted">Reliable Battery Pack Testers for performance, safety, and durability validation. Ensuring accurate testing for EV, ESS, and consumer battery applications with advanced automation.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -417,7 +431,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Other Machines</h5>
-            <p class="card-text text-muted">Innovative machines for energy and technology solutions.</p>
+            <p class="card-text text-muted">Wide range of supporting machines for battery manufacturing, including welding, sorting, automation, and testing solutions to enhance production efficiency and quality.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
