--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Solar PV Production Line Solutions - Indygreen Technologies</title>
+  <title>Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting - Indygreen Technologies</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies delivers turnkey Solar PV production lines and factory setup solutions. From design to execution, we provide complete solar panel manufacturing plants with advanced technology and global expertise." />
+  <meta name="description" content="Indygreen Technologies delivers turnkey cylindrical battery production solutions including assembly lines, welding machines, advanced cell testers, and automated sorting machines for high-quality lithium battery manufacturing." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="Solar PV production line, solar panel manufacturing plant, turnkey solar factory setup, solar module production India, photovoltaic assembly line, GW scale solar manufacturing, solar cell to module solutions, renewable energy solar PV" />
+  <meta name="keywords" content="cylindrical battery production line, lithium battery assembly line, cylindrical battery welding machines, cylindrical cell testers, cylindrical battery sorting machine, battery pack manufacturing equipment, cylindrical cell production turnkey, lithium-ion battery machinery, cylindrical battery solutions" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -17,19 +17,19 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Solar PV Production Line Solutions - Indygreen Technologies" />
-  <meta property="og:description" content="Turnkey Solar PV production line solutions – complete solar panel manufacturing plants with advanced automation, efficiency, and global standards." />
-  <meta property="og:url" content="https://www.indygreentech.com/solar-pv.html" />
+  <meta property="og:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting" />
+  <meta property="og:description" content="Turnkey cylindrical battery production line by Indygreen Technologies – including assembly lines, welding machines, precise cell testers, and automated sorting machines." />
+  <meta property="og:url" content="https://www.indygreentech.com/cylindrical-batteries-lines.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Solar PV Production Line Solutions - Indygreen Technologies" />
-  <meta name="twitter:description" content="Indygreen Technologies provides turnkey solar PV production lines and factory setups to power renewable energy manufacturing worldwide." />
+  <meta name="twitter:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting" />
+  <meta name="twitter:description" content="End-to-end cylindrical battery turnkey production line solutions – assembly, welding, testing & sorting for lithium batteries." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/solar-pv.html" />
+  <link rel="canonical" href="https://www.indygreentech.com/cylindrical-batteries-lines.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -115,6 +115,7 @@
 <li class="nav-item mr-0"><a href="#" title="Laser Cutters" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Cutters</a></li>
 </ul>
 </li>
+
 <li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
@@ -313,21 +314,20 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row">
+<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">SOLAR PV</h1>
+<h1 class="title text-white">Lithium Cell Lines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span>
-<span class="text-white">Solar PV</span>
+<span class="text-white">Lithium Cell Lines</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -339,30 +339,13 @@
 <div class="container py-5">
   <div class="row g-4">
     <!-- Card 1 -->
-    <div class="col-md-4 d-flex">
+        <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-panel-production-lines.html" title="Solar Panel Production Line in India"><img src="img/solar-panel-production-turnkey-line.png" class="card-img-top product-img" alt="Solar Panel Production Line in India" title="Solar Panel Production Line in India"></a>
+        <a href="#" title="Copper Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">SOLAR PANEL PRODUCTION LINES</h5>
-            <p class="card-text text-muted">Complete Solar Panel Production Line offering high-efficiency automation for cell stringing, laminating, framing, and testing. Designed to boost productivity and ensure superior quality in solar module manufacturing.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="solar-panel-production-lines.html" title="Solar Panel Production Line" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Card 2 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Cell Production Line in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell Production Line in India" title="Solar Cell Production Line in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Solar Cell Production Lines</h5>
-            <p class="card-text text-muted">Advanced Solar Cell Production Line for efficient, high-precision manufacturing of solar cells. Integrates cutting-edge technology to enhance cell efficiency, yield, and overall quality.</p>
+            <h5 class="card-title">Copper Foil</h5>
+            <p class="card-text text-muted">High-quality Copper Foil for lithium-ion batteries, offering excellent conductivity, durability, and uniform thickness. Ideal for anode current collectors in EVs, ESS, and consumer batteries.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -371,14 +354,31 @@
         </div>
       </div>
     </div>
-    <!-- Card 3 -->
+    <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="PV Reliability Turnkey Lab in India"><img src="img/pv-reliability-turnkey-lab.png" class="card-img-top product-img" alt="PV Reliability Turnkey Lab in India" title="PV Reliability Turnkey Lab in India"></a>
+        <a href="#" title="Aluminum Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">PV Reliability Turnkey Lab</h5>
-            <p class="card-text text-muted">Comprehensive PV Reliability Turnkey Lab solutions for thorough testing and validation of solar panels. Ensure long-term performance and durability with advanced environmental and mechanical stress testing.</p>
+            <h5 class="card-title">Aluminum Foil</h5>
+            <p class="card-text text-muted">Premium Aluminum Foil for lithium-ion batteries, providing superior conductivity, corrosion resistance, and uniform thickness. Perfect for cathode current collectors in EV, ESS, and consumer applications.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+     <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Belt Seperator in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Belt Seperator in India" title="Belt Seperator in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Belt Seperator</h5>
+            <p class="card-text text-muted">High-precision Belt Separators for lithium-ion batteries, ensuring uniform coating, smooth winding, and reliable insulation. Ideal for EV, ESS, and advanced battery manufacturing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -390,33 +390,33 @@
   </div>
 </div>
 
+
 <div class="container py-5">
   <div class="row g-4">
     <!-- Card 1 -->
-    <div class="col-md-4 d-flex">
+        <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="raw-materials.html" title="Raw Materials in India"><img src="img/raw-materials.png" class="card-img-top product-img" alt="Raw Materials" title="Raw Materials in India"></a>
+        <a href="#" title="Electrolyte in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Raw Materials</h5>
-            <p class="card-text text-muted">High-quality raw materials sourced for solar panel and battery production. Ensure consistency, durability, and superior performance in manufacturing processes.</p>
+            <h5 class="card-title">Electrolyte</h5>
+            <p class="card-text text-muted">High-performance Electrolytes for lithium-ion batteries, ensuring optimal ionic conductivity, stability, and safety. Designed for EVs, energy storage systems, and consumer electronics.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="raw-materials.html" title="Raw Materials" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
     </div>
-
     <!-- Card 2 -->
-    <div class="col-md-4 d-flex">
+        <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-       <a href="#" title="Solar EPC Components in India"><img src="img/solar-epc-components.png" class="card-img-top product-img" alt="Solar EPC components in India" title="Solar EPC components in India"></a>
+        <a href="#" title="Casing in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Casing in India" title="Casing in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Solar EPC components</h5>
-            <p class="card-text text-muted">Reliable Solar EPC components for engineering, procurement, and construction of solar power plants. High-quality parts ensuring efficient installation, optimal performance, and long-term durability.</p>
+            <h5 class="card-title">Casing</h5>
+            <p class="card-text text-muted">Durable and high-quality Battery Casings for lithium-ion cells, providing protection, safety, and structural integrity for EV, ESS, and consumer battery applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -426,7 +426,6 @@
       </div>
     </div>
 
-    <!-- Card 3 -->
   </div>
 </div>
   <!-- Footer -->
