--- a/news-and-events.html
+++ b/news-and-events.html
@@ -5,7 +5,7 @@
  <title>Careers at Indygreen Technologies - Join Our Renewable Energy Team</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Explore career opportunities at Indygreen Technologies. We are hiring passionate professionals in solar, lithium battery, EV mobility, and hydrogen solutions. Join us and build a sustainable future." />
+  <meta name="description" content="Explore career opportunities at Indygreen Technologies. We are hiring passionate professionals in solar, lithium battery, EV mobility, and . Join us and build a sustainable future." />
 
   <!-- Meta Keywords -->
   <meta name="keywords" content="Indygreen Technologies careers, renewable energy jobs, solar jobs India, lithium battery jobs, EV mobility careers, hydrogen energy jobs, green technology jobs, clean energy careers, engineering jobs renewable energy, Indygreentech hiring" />
@@ -107,43 +107,43 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Line</a>
+<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Semi Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Line</a></li>
-<li class="nav-item mr-0"><a href="#" title="Fully Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Line</a></li>
-<li class="nav-item mr-0"><a href="#" title="Tarbor and Stringer" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tarbor and Stringer</a></li>
+<li class="nav-item mr-0"><a href="#" title="Semi Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Fully Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Tabber Stringers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tabber Stringers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laminator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laser Cutters" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Cutters</a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
+<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Cells</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar Plant" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Plant</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Glass" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Glass</a></li>
 <li class="nav-item mr-0"><a href="#" title="Solar Aluminum Frame" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Aluminum Frame</a></li>
 <li class="nav-item mr-0"><a href="#" title="Solar Junction Box" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Junction Box</a></li>
 <li class="nav-item mr-0"><a href="#" title="Solar Sealant and Bonding" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Sealant and Bonding</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar wire and plugs" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar wire and plugs</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solder Wire & Solar Flux" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solder Wire & Solar Flux</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="#" title="Solar EPC components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC components </a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
+<li class="nav-item mr-0"><a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
+<li class="nav-item mr-0"><a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
 <li class="nav-item mr-0"><a href="#" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
@@ -167,20 +167,20 @@
 <!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
 
 <li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Line</a>
+<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="GW Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> GW Factories</a>
+<li class="nav-item mr-0"><a href="#" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Lab/ Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/ Pilot Lines</a>
+<li class="nav-item mr-0"><a href="#" title="Lab/Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/Pilot Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
+<li class="nav-item mr-0"><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
@@ -210,18 +210,18 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line">Solar Panel Production Line</a>
+<a href="solar-panel-production-lines.html" title="Solar Panel Production Line">SOLAR PANEL PRODUCTION LINES</a>
 <ul>
-<li><a href="#" title="Semi Auto Line">Semi Auto Line</a></li>
-<li><a href="#" title="Fully Auto Line">Fully Auto Line</a></li>
-<li><a href="#" title="Tarbor and Stringer">Tarbor and Stringer</a></li>
+<li><a href="#" title="Semi Auto Line">Semi Auto Lines</a></li>
+<li><a href="#" title="Fully Auto Line">Fully Auto Lines</a></li>
+<li><a href="#" title="Tabber Stringers">Tabber Stringers</a></li>
 <li><a href="#" title="Laminator">Laminator</a></li>
 <li><a href="#" title="Laser Cutters">Laser Cutters</a></li>
 </ul>
 </li>
 <!-- Two -->
  <li>
-<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
+<a href="#" title="Solar Cell Production Line">Solar Cell Production Lines</a>
 </li>
 <li>
 <a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
@@ -230,11 +230,11 @@
 <a href="raw-materials.html" title="Raw Materials">Raw Materials</a>
 <ul>
 <li><a href="#" title="Solar Cells">Solar Cells</a></li>
-<li><a href="#" title="Solar Plant">Solar Plant</a></li>
+<li><a href="#" title="Solar Glass">Solar Glass</a></li>
 <li><a href="#" title="Solar Aluminum Frame">Solar Aluminum Frame</a></li>
 <li><a href="#" title="Solar Junction Box">Solar Junction Box</a></li>
 <li><a href="#" title="Solar Sealant and Bonding">Solar Sealant and Bonding</a></li>
-<li><a href="#" title="Solar wire and plugs">Solar wire and plugs</a></li>
+<li><a href="#" title="Solder Wire & Solar Flux">Solder Wire & Solar Flux</a></li>
 </ul>
 </li>
 <li>
@@ -249,12 +249,12 @@
 
 
 
-<li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
+<li><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
-<a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
+<a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
+<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Lines</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
 <li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
 <li><a href="#" title="Welding Machines">Welding Machines</a></li>
@@ -262,7 +262,7 @@
 </li>
 <!-- Two -->
 <li>
-<a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
+<a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
 <ul>
 <li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
 <li><a href="#" title="Automatic Lines">Automatic Lines</a></li>
@@ -283,6 +283,20 @@
 </li>
 
 <li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
+  <ul>
+<li><a href="#" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
+<li><a href="#" title="Giga Factories">Giga Factories</a></li>
+<li><a href="#" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
+<li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
+<ul>
+<li><a href="#" title="Copper Foil">Copper Foil</a></li>
+<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="#" title="Belt Seperator">Belt Seperator</a></li>
+<li><a href="#" title="Electrolyte">Electrolyte</a></li>
+<li><a href="#" title="Casing">Casing</a></li>
+</ul>
+</li>
+</ul>
 </li>
 <li><a href="career.html" title="Career">Career</a></li>
 <li><a href="news-and-events.html" title="News & Events">News & Events</a></li>
@@ -356,7 +370,7 @@
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
+  <li class="border-bottom"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
 
 
 
