--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 <li><a href="#" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
 <li><a href="#" title="Giga Factories">Giga Factories</a></li>
 <li><a href="#" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
-<li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
+<li><a href="#" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
 <ul>
 <li><a href="#" title="Copper Foil">Copper Foil</a></li>
 <li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
@@ -2026,11 +2026,6 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-2.png" alt="FUELON" title="FUELON" class="w-100"></a>
-</div>
-</div>
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
 <div class="brand__image-item brand__image-item-br brand__image-item-bb">
@@ -2051,11 +2046,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-6.png" alt="Amptek" title="Amptek" class="w-100"></a>
-</div>
-</div>
+
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
 <div class="brand__image-item brand__image-item-br brand__image-item-bb">
@@ -2083,11 +2074,6 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-11.jpg" alt="OKINAWA" title="OKINAWA" class="w-100"></a>
-</div>
-</div>
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
 <div class="brand__image-item brand__image-item-br brand__image-item-bb">
@@ -2107,11 +2093,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-15.jpg" alt="Natural Battery Technology" title="Natural Battery Technology" class="w-100"></a>
-</div>
-</div>
+
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
 <div class="brand__image-item brand__image-item-br brand__image-item-bb">
@@ -2119,11 +2101,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-17.jpg" alt="DUAK" title="DUAK" class="w-100"></a>
-</div>
-</div>
+
 
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
@@ -2147,11 +2125,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-21.png" alt="ER" title="ER" class="w-100"></a>
-</div>
-</div>
+
 
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
@@ -2178,17 +2152,9 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-26.png" alt="AGASTY ENERGY" title="AGASTY ENERGY" class="w-100"></a>
-</div>
-</div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-27.png" alt="Birds India" title="Bird India" class="w-100"></a>
-</div>
-</div>
+
+
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
 <div class="brand__image-item brand__image-item-br brand__image-item-bb">
@@ -2196,17 +2162,9 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-29.png" alt="THUKRAL Electric Electric-Bikes" title="THUKRAL Electric-Bikes" class="w-100"></a>
-</div>
-</div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-30.png" alt="SANVARU" title="SANVARU" class="w-100"></a>
-</div>
-</div>
+
+
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
 <div class="brand__image-item brand__image-item-br brand__image-item-bb">
@@ -2220,11 +2178,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-33.png" alt="VOLTA" title="VOLTA" class="w-100"></a>
-</div>
-</div>
+
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
 <div class="brand__image-item brand__image-item-br brand__image-item-bb">
@@ -2238,11 +2192,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-36.png" alt="EUCLION" title="EUCLION" class="w-100"></a>
-</div>
-</div>
+
 
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
@@ -2252,24 +2202,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-38.png" alt="E-REX" title="E-REX" class="w-100"></a>
-</div>
-</div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-39.png" alt="High-Flow" title="High-Flow" class="w-100"></a>
-</div>
-</div>
-
-
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-40.png" alt="Dinali" title="Dinali" class="w-100"></a>
-</div>
-</div>
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
 <div class="brand__image-item brand__image-item-br brand__image-item-bb">
@@ -2277,18 +2210,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 </div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-42.png" alt="INNOLIA ENERGY" title="INNOLIA ENERGY" class="w-100"></a>
-</div>
-</div>
 
-
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-43.png" alt="Fuelout" title="Fuelout" class="w-100"></a>
-</div>
-</div>
 
 
 
@@ -2305,23 +2227,8 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 </div>
 
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-46.png" alt="GREENFUEL" title="GREENFUEL" class="w-100"></a>
-</div>
-</div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-47.png" alt="PTECH" title="PTECH" class="w-100"></a>
-</div>
-</div>
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 p-0">
-<div class="brand__image-item brand__image-item-br brand__image-item-bb">
-<a href="#"><img src="img/e-mobility/logo-48.png" alt="JASCON ENERGY PVT. LTD." title="JASCON ENERGY PVT. LTD." class="w-100"></a>
-</div>
-</div>
 
 
 </div>
