--- a/dummm.html
+++ b/dummm.html
@@ -266,7 +266,7 @@ body {
                 </div>
     </div>
     </div>
-    <hr class="line">
+    <hr class="Lines">
     <div class="emob col-lg-6">
         <h3>LITHIUM BATTERIES</h3>
     <div class="client-grid emobility-clients">
