--- a/fully-auto-lines.html
+++ b/fully-auto-lines.html
@@ -2,36 +2,37 @@
 <html lang="en">
 <head>
   <head>
-  <!-- Title -->
-  <title>Lithium Cell Raw Materials | Battery Manufacturing Components - Indygreen Technologies</title>
+<!-- Title -->
+<title>Fully Auto Solar PV Production Lines | Indygreen Technologies</title>
 
-  <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies supplies high-quality lithium cell raw materials including copper foil, aluminum foil, separators, electrolytes, and casings for efficient lithium-ion battery manufacturing." />
+<!-- Meta Description -->
+<meta name="description" content="Indygreen Technologies offers advanced Fully Auto Lines for solar PV production, providing fully automated, precise, and high-efficiency solutions for solar panel and module assembly." />
 
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="lithium cell raw materials, lithium battery components, copper foil for batteries, aluminum foil for lithium cells, battery separators, battery electrolyte suppliers, lithium cell casing, lithium-ion battery raw materials, turnkey lithium cell production materials" />
+<!-- Meta Keywords -->
+<meta name="keywords" content="fully auto solar PV lines, fully automatic solar panel assembly, solar PV production equipment, automated solar module manufacturing, Indygreen Technologies, turnkey solar PV production lines, solar panel assembly solutions" />
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow" />
+<!-- Robots -->
+<meta name="robots" content="index, follow" />
 
-  <!-- Author & Publisher -->
-  <meta name="author" content="Indygreen Technologies" />
-  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
+<!-- Author & Publisher -->
+<meta name="author" content="Indygreen Technologies" />
+<meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Lithium Cell Raw Materials | Battery Manufacturing Components" />
-  <meta property="og:description" content="Premium lithium cell raw materials by Indygreen Technologies – copper foil, aluminum foil, separators, electrolytes, and casings for efficient battery production." />
-  <meta property="og:url" content="https://www.indygreentech.com/lithium-cell-raw-materials.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Indygreen Technologies" />
+<!-- Open Graph -->
+<meta property="og:title" content="Fully Auto Solar PV Production Lines | Indygreen Technologies" />
+<meta property="og:description" content="Indygreen Technologies provides Fully Auto Lines for efficient solar PV production, offering automated solutions for solar panel and module assembly." />
+<meta property="og:url" content="https://www.indygreentech.com/fully-auto-lines.html" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Indygreen Technologies" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Lithium Cell Raw Materials | Battery Manufacturing Components" />
-  <meta name="twitter:description" content="Indygreen Technologies provides high-quality lithium cell raw materials including copper foil, aluminum foil, separators, electrolytes, and casings for lithium-ion battery production." />
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Fully Auto Solar PV Production Lines | Indygreen Technologies" />
+<meta name="twitter:description" content="Advanced Fully Auto Lines by Indygreen Technologies for fully automated, precise, and high-efficiency solar panel and module assembly." />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/lithium-cell-raw-materials.html" />
+<!-- Canonical -->
+<link rel="canonical" href="https://www.indygreentech.com/fully-auto-lines.html" />
+
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -316,23 +317,25 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/breadcumb.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Lithium Cell Raw Materials</h1>
+<h1 class="title text-white">Fully Auto Lines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="lithium-cell-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Cell Lines</a>
+<a title="Homepage" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
+<span class="ttm-bread-sep text-white">/</span>
+<a title="Homepage" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Solar Panel Production Lines</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Lithium Cell Raw Materials</span>
+<span class="text-white">Fully Auto Lines</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -342,97 +345,17 @@
 <!-- About Us -->
  
 <div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-        <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Copper Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Copper Foil</h5>
-            <p class="card-text text-muted">High-quality Copper Foil for lithium-ion batteries, offering excellent conductivity, durability, and uniform thickness. Ideal for anode current collectors in EVs, ESS, and consumer batteries.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
+<div class="product col-lg-12">
+    <div class="product-image col-lg-4">
+        <img src="img/stinger.png" alt=" Fully Auto Lines in India" title=" Fully Auto Lines in India" class="w-100">
     </div>
-    <!-- Card 2 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Aluminum Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Aluminum Foil</h5>
-            <p class="card-text text-muted">Premium Aluminum Foil for lithium-ion batteries, providing superior conductivity, corrosion resistance, and uniform thickness. Perfect for cathode current collectors in EV, ESS, and consumer applications.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
+    <div class="product-description col-lg-8">
+        <h2><strong>Fully Auto Lines</strong></h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
     </div>
-
-    <!-- Card 3 -->
-     <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Belt Seperator in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Belt Seperator in India" title="Belt Seperator in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Belt Seperator</h5>
-            <p class="card-text text-muted">High-precision Belt Separators for lithium-ion batteries, ensuring uniform coating, smooth winding, and reliable insulation. Ideal for EV, ESS, and advanced battery manufacturing.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+</div>
 </div>
 
-
-<div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-        <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Electrolyte in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Electrolyte</h5>
-            <p class="card-text text-muted">High-performance Electrolytes for lithium-ion batteries, ensuring optimal ionic conductivity, stability, and safety. Designed for EVs, energy storage systems, and consumer electronics.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Card 2 -->
-        <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Casing in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Casing in India" title="Casing in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Casing</h5>
-            <p class="card-text text-muted">Durable and high-quality Battery Casings for lithium-ion cells, providing protection, safety, and structural integrity for EV, ESS, and consumer battery applications.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
