--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting - Indygreen Technologies</title>
+   <!-- Title -->
+  <title>Lithium Cell Production Lines | Turnkey Manufacturing Solutions - Indygreen Technologies</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies delivers turnkey cylindrical battery production solutions including assembly lines, welding machines, advanced cell testers, and automated sorting machines for high-quality lithium battery manufacturing." />
+  <meta name="description" content="Indygreen Technologies provides turnkey lithium cell production lines for EVs and energy storage systems, including assembly, formation, testing, and quality control for high-efficiency lithium batteries." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="cylindrical battery production line, lithium battery assembly line, cylindrical battery welding machines, cylindrical cell testers, cylindrical battery sorting machine, battery pack manufacturing equipment, cylindrical cell production turnkey, lithium-ion battery machinery, cylindrical battery solutions" />
+  <meta name="keywords" content="lithium cell production line, lithium battery cell manufacturing, EV lithium cell assembly, lithium-ion cell production turnkey, lithium cell formation line, battery cell testing, lithium cell manufacturing equipment, turnkey lithium battery cell Lines" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -17,19 +18,19 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting" />
-  <meta property="og:description" content="Turnkey cylindrical battery production line by Indygreen Technologies – including assembly lines, welding machines, precise cell testers, and automated sorting machines." />
-  <meta property="og:url" content="https://www.indygreentech.com/cylindrical-batteries-lines.html" />
+  <meta property="og:title" content="Lithium Cell Production Lines | Turnkey Manufacturing Solutions" />
+  <meta property="og:description" content="Turnkey lithium cell production lines by Indygreen Technologies – including assembly, formation, testing, and quality control for efficient lithium battery manufacturing." />
+  <meta property="og:url" content="https://www.indygreentech.com/lithium-cell-lines.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting" />
-  <meta name="twitter:description" content="End-to-end cylindrical battery turnkey production line solutions – assembly, welding, testing & sorting for lithium batteries." />
+  <meta name="twitter:title" content="Lithium Cell Production Lines | Turnkey Manufacturing Solutions" />
+  <meta name="twitter:description" content="End-to-end turnkey lithium cell production line solutions – assembly, formation, testing, and quality control for high-efficiency lithium batteries." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/cylindrical-batteries-lines.html" />
+  <link rel="canonical" href="https://www.indygreentech.com/lithium-cell-lines.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -106,17 +107,17 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a>
+<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Semi Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
-<li class="nav-item mr-0"><a href="#" title="Fully Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Fully Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Tabber Stringers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tabber Stringers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laminator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laser Cutters" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Cutters</a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
@@ -136,7 +137,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
@@ -174,7 +175,7 @@
 
 <li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
+<li class="nav-item mr-0"><a href="#" title="LIB Separator Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
 </li>
 <li class="nav-item mr-0"><a href="#" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
 </li>
@@ -210,10 +211,10 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-lines.html" title="Solar Panel Production Line">SOLAR PANEL PRODUCTION LINES</a>
+<a href="solar-panel-production-lines.html" title="Solar Panel Production Lines">SOLAR PANEL PRODUCTION LINES</a>
 <ul>
-<li><a href="#" title="Semi Auto Line">Semi Auto Lines</a></li>
-<li><a href="#" title="Fully Auto Line">Fully Auto Lines</a></li>
+<li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
+<li><a href="#" title="Fully Auto Lines">Fully Auto Lines</a></li>
 <li><a href="#" title="Tabber Stringers">Tabber Stringers</a></li>
 <li><a href="#" title="Laminator">Laminator</a></li>
 <li><a href="#" title="Laser Cutters">Laser Cutters</a></li>
@@ -221,7 +222,7 @@
 </li>
 <!-- Two -->
  <li>
-<a href="#" title="Solar Cell Production Line">Solar Cell Production Lines</a>
+<a href="#" title="Solar Cell Production Lines">Solar Cell Production Lines</a>
 </li>
 <li>
 <a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
@@ -254,7 +255,7 @@
 <li>
 <a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Lines</a></li>
+<li><a href="#" title="Turnkey Assembly Lines">Turnkey Assembly Lines</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
 <li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
 <li><a href="#" title="Welding Machines">Welding Machines</a></li>
