--- a/solar-pv.html
+++ b/solar-pv.html
@@ -106,16 +106,16 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a>
+<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Semi Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
-<li class="nav-item mr-0"><a href="#" title="Fully Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Fully Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Tabber Stringers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tabber Stringers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laminator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laser Cutters" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Cutters</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
@@ -135,7 +135,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 <li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
@@ -173,7 +173,7 @@
 
 <li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
+<li class="nav-item mr-0"><a href="#" title="LIB Separator Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
 </li>
 <li class="nav-item mr-0"><a href="#" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
 </li>
@@ -209,10 +209,10 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-lines.html" title="Solar Panel Production Line">SOLAR PANEL PRODUCTION LINES</a>
+<a href="solar-panel-production-lines.html" title="Solar Panel Production Lines">SOLAR PANEL PRODUCTION LINES</a>
 <ul>
-<li><a href="#" title="Semi Auto Line">Semi Auto Lines</a></li>
-<li><a href="#" title="Fully Auto Line">Fully Auto Lines</a></li>
+<li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
+<li><a href="#" title="Fully Auto Lines">Fully Auto Lines</a></li>
 <li><a href="#" title="Tabber Stringers">Tabber Stringers</a></li>
 <li><a href="#" title="Laminator">Laminator</a></li>
 <li><a href="#" title="Laser Cutters">Laser Cutters</a></li>
@@ -220,7 +220,7 @@
 </li>
 <!-- Two -->
  <li>
-<a href="#" title="Solar Cell Production Line">Solar Cell Production Lines</a>
+<a href="#" title="Solar Cell Production Lines">Solar Cell Production Lines</a>
 </li>
 <li>
 <a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
@@ -253,7 +253,7 @@
 <li>
 <a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Lines</a></li>
+<li><a href="#" title="Turnkey Assembly Lines">Turnkey Assembly Lines</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
 <li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
 <li><a href="#" title="Welding Machines">Welding Machines</a></li>
@@ -349,7 +349,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="solar-panel-production-lines.html" title="Solar Panel Production Line" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="solar-panel-production-lines.html" title="Solar Panel Production Lines" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
